--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "vue-admin-better",
+  "type": "module",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -16,11 +18,14 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.7.3",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "eslint": "^9.11.1",
+    "eslint-plugin-format": "^0.1.2",
     "npm-run-all2": "^6.2.0",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
