--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "stylelint": "stylelint \"**/*.{css,scss,vue,html}\"",
+    "stylelint:fix": "stylelint \"**/*.{css,scss,vue,html}\" --fix"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -27,6 +29,13 @@
     "eslint": "^9.11.1",
     "eslint-plugin-format": "^0.1.2",
     "npm-run-all2": "^6.2.0",
+    "postcss": "^8.4.47",
+    "postcss-html": "^1.7.0",
+    "postcss-scss": "^4.0.9",
+    "sass": "^1.79.4",
+    "stylelint": "^16.9.0",
+    "stylelint-config-recess-order": "^5.1.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
