--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "stylelint": "stylelint \"**/*.{css,scss,vue,html}\"",
-    "stylelint:fix": "stylelint \"**/*.{css,scss,vue,html}\" --fix"
+    "stylelint:fix": "stylelint \"**/*.{css,scss,vue,html}\" --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -28,6 +29,7 @@
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^9.11.1",
     "eslint-plugin-format": "^0.1.2",
+    "husky": "^9.1.6",
     "npm-run-all2": "^6.2.0",
     "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
