build: 添加 lint-staged
用于对增量代码进行 eslint 和 stylelint 检查，并自动修复出现的问题

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:fix": "eslint . --fix",
     "stylelint": "stylelint \"**/*.{css,scss,vue,html}\"",
     "stylelint:fix": "stylelint \"**/*.{css,scss,vue,html}\" --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -30,6 +31,7 @@
     "eslint": "^9.11.1",
     "eslint-plugin-format": "^0.1.2",
     "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "npm-run-all2": "^6.2.0",
     "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
