--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.11.1",
     "eslint-plugin-format": "^0.1.2",
     "husky": "^9.1.6",
@@ -46,5 +47,10 @@
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vue-tsc": "^2.0.21"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
