--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@antfu/eslint-config": "^3.7.3",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@iconify/json": "^2.2.258",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
@@ -46,6 +47,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "~5.4.0",
     "unplugin-auto-import": "^0.18.3",
+    "unplugin-icons": "^0.19.3",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
