--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@vueuse/core": "^11.1.0",
     "element-plus": "^2.8.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
