--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.11.1",
     "eslint-plugin-format": "^0.1.2",
@@ -46,6 +47,7 @@
     "stylelint": "^16.9.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-standard-scss": "^13.1.0",
+    "tailwindcss": "^3.4.13",
     "typescript": "~5.4.0",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-icons": "^0.19.3",
