--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ coverage
 
 *.tsbuildinfo
 
-src/typings/auto-imports.d.ts
-src/typings/components.d.ts
+src/types/auto-imports.d.ts
+src/types/components.d.ts
