--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^11.1.0",
+    "echarts": "^5.5.1",
     "element-plus": "^2.8.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
