--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^11.1.0",
+    "animate.css": "^4.1.1",
     "echarts": "^5.5.1",
     "element-plus": "^2.8.4",
     "pinia": "^2.1.7",
@@ -29,7 +30,7 @@
     "@antfu/eslint-config": "^3.7.3",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@iconify/json": "^2.2.258",
+    "@iconify-json/ep": "^1.1.15",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
