--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "animate.css": "^4.1.1",
     "echarts": "^5.5.1",
     "element-plus": "^2.8.4",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-i18n": "10",
@@ -33,6 +34,7 @@
     "@iconify-json/ep": "^1.1.15",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
+    "@types/path-browserify": "^1.0.3",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/tsconfig": "^0.5.1",
